--- a/src/makefile.linux-mingw
+++ b/src/makefile.linux-mingw
@@ -82,6 +82,8 @@ OBJS= \
     obj/script.o \
     obj/sync.o \
     obj/util.o \
+	obj/hash.o \
+    obj/bloom.o \
     obj/wallet.o \
     obj/walletdb.o \
     obj/noui.o \
