--- a/src/makefile.osx
+++ b/src/makefile.osx
@@ -89,6 +89,8 @@ OBJS= \
     obj/util.o \
     obj/wallet.o \
     obj/walletdb.o \
+	obj/hash.o \
+    obj/bloom.o \
     obj/noui.o \
     obj/pbkdf2.o \
     obj/kernel.o \
