Added MurmurHash3 for future updates

--- a/src/makefile.linux-mingw
+++ b/src/makefile.linux-mingw
@@ -75,6 +75,7 @@ OBJS= \
     obj/wallet.o \
     obj/walletdb.o \
     obj/noui.o \
+	obj/hash.o \
     obj/kernel.o \
     obj/pbkdf2.o \
     obj/scrypt.o \
