Fixed new bugs caused in 2.2.0

--- a/src/makefile.bsd
+++ b/src/makefile.bsd
@@ -127,7 +127,7 @@ OBJS= \
     obj/scrypt.o \
     obj/scrypt-arm.o \
     obj/scrypt-x86.o \
-    obj/scrypt-x86_64.o
+    obj/scrypt-x86_64.o 
 
 all: GirlsTokend
 
@@ -169,6 +169,7 @@ GirlsTokend: $(OBJS:obj/%=obj/%)
 clean:
 	-rm -f GirlsTokend
 	-rm -f obj/*.o
+	-rm -f obj/zerocoin/*.o
 	-rm -f obj/*.P
 	-rm -f obj/zerocoin/*.P
 	-rm -f obj/build.h
