--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -134,7 +134,7 @@ OBJS= \
     obj/scrypt.o \
     obj/scrypt-arm.o \
     obj/scrypt-x86.o \
-    obj/scrypt-x86_64.o
+    obj/scrypt-x86_64.o 
 
 all: GirlsTokend
 
@@ -176,7 +176,9 @@ GirlsTokend: $(OBJS:obj/%=obj/%)
 clean:
 	-rm -f GirlsTokend
 	-rm -f obj/*.o
+	-rm -f obj/zerocoin/*.o
 	-rm -f obj/*.P
+	-rm -f obj/zerocoin/*.P
 	-rm -f obj/build.h
 
 FORCE:
