--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -2,20 +2,20 @@
 # Distributed under the MIT/X11 software license, see the accompanying
 # file COPYING or http://www.opensource.org/licenses/mit-license.php.
 
-USE_UPNP:=1
+USE_UPNP:=-
 USE_IPV6:=1
 
 DEPSDIR?=/c/deps
-BOOST_SUFFIX?=-mgw49-mt-s-1_58
+BOOST_SUFFIX?=-mgw49-mt-s-1_55
 
 INCLUDEPATHS= \
- -I"C:\deps\boost_1_58_0" \
+ -I"C:\deps\boost_1_55_0" \
  -I"C:\deps\db-4.8.30.NC\build_unix" \
  -I"C:\deps\openssl-1.0.1l\include"
 
 LIBPATHS= \
  -L"$(CURDIR)\leveldb" \
- -L"C:\deps\boost_1_58_0\stage\lib" \
+ -L"C:\deps\boost_1_55_0\stage\lib" \
  -L"C:\deps\db-4.8.30.NC\build_unix" \
  -L"C:\deps\openssl-1.0.1l"
 
@@ -87,7 +87,7 @@ OBJS= \
     obj/pbkdf2.o \
     obj/scrypt.o \
     obj/scrypt-x86.o \
-    obj/scrypt-x86_64.o
+    obj/scrypt-x86_64.o 
 
 all: GirlsTokend.exe
 
@@ -114,5 +114,6 @@ GirlsTokend.exe: $(OBJS:obj/%=obj/%)
 clean:
 	-del /Q GirlsTokend.exe
 	-del /Q obj\*
+	-del /Q obj\zerocoin\*
 
 FORCE:
